   (File|Import XML...,Export XML... menu items)
   New files in GNED: genxml.tcl, parsexml.tcl.
 - IMPORTANT! XML SUPPORT REQUIRES THE TclXML PACKAGE, at least version 1.2.
   (The contents of TclXML-1.2.tgz should be extracted under the tcl/lib/ dir.)
   BUG in the TclXML-1.2 parser: it silently discards attributes which contain
   '&' or '<' characters!!!!
Nov 19, 2000
 - bugfix: removed bogus asserts around parsened.cc#70 and #140 which caused the
   program to abort when NED code contained two submodules with the
   same name when switching from text to graphics.
Nov 20, 2000
 - improvement: File|Close and File|Exit made more graceful -- the "Not saved,
   save?" dialog now has a Cancel button
 - improvement: implemented File|Save all
 - bugfix: new submodules, modules, channels etc. now always get unique names
Dec 17, 2000
 - improvement: switching from text mode to graphics made faster: now GNED
   won't parse the ned source if it hasn't been edited
 - improvement: GNED will refuse to exit or close a NED file if there are text mode
   canvases with edits. You'll have to switch those canvases to graphics
   to get the NED source backparsed.
 - Connection Properties dialog implemented. (Cannot handle 'for' loops yet.)
Dec 18, 2000
 - implemented Channel Properties dialog
 - old display string classes (disp.cc) removed
 - small bugfix on comment handling in Properties dialogs (no longer adds extra
   blank lines)
Dec 18-22, 2000
 - implemented scrolling for the tabs strip (the one with the names of the open
   canvases) if there're too many tabs on it
Jan 2, 2001
 - cosmetic changes in plotedit.tcl
Jan 16, 2001
 - fix: added Tcl_FindExecutable(argv[0]) to Tcl initialization code (needed by
   Cygwin 1.1)
Jan 21, 2001
 - fixed bug with Ctrl-N (Find next) binding
Feb 6, 2001
 - make clean didn't delete tclcode.cc
Feb 13, 2001
 - fixed bug which caused the "Drawing options" dialog to go behind the main
   app window after closing the color selection dialog