@@ -272,3 +272,4 @@ Feb 6, 2001
 Feb 13, 2001
  - fixed bug which caused the "Drawing options" dialog to go behind the main
    app window after closing the color selection dialog
+ - fixed handling of comments in all "Properties" dialogs (messed up newlines)
